[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/scrapbox.gd" type="Script" id=1]
[ext_resource path="res://Assets/spaceBuilding_006.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[node name="Scrapbox" type="Node2D"]
script = ExtResource( 1 )

[node name="ScrapboxArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScrapboxArea"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
[connection signal="body_entered" from="ScrapboxArea" to="." method="_on_ScrapboxArea_body_entered"]
[connection signal="body_exited" from="ScrapboxArea" to="." method="_on_ScrapboxArea_body_exited"]
[connection signal="mouse_entered" from="ScrapboxArea" to="." method="_on_ScrapboxArea_mouse_entered"]
[connection signal="mouse_exited" from="ScrapboxArea" to="." method="_on_ScrapboxArea_mouse_exited"]
